--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -207,6 +207,14 @@ img::-moz-selection {
   width: 100%;
   margin: auto;
 }
+.center-thumb {
+  margin: 0;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
 
 .pub-thumbnail {
   border: 1px solid #ddd;
