--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -83,16 +83,18 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 2rem;
+  font-size: 1.5rem;
   line-height: 3.5rem;
+  font-weight: bold;
 }
 
 h2 {
-  font-size: 1.5rem;
+  font-size: 1rem;
+  font-weight: bold;
 }
 
 h3 {
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 
 .lead {
@@ -141,16 +143,16 @@ h3 {
     font-size: 11pt;
   }
   h1 {
-    font-size: 2rem;
+    font-size: 1.5rem;
     line-height: 2.5rem;
   }
 
   h2 {
-    font-size: 1.5rem;
+    font-size: 1rem;
   }
 
   h3 {
-    font-size: 1.2rem;
+    font-size: 1rem;
   }
 }
 
