--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -100,7 +100,7 @@
   <div class="row">
     <div class="col-12 mx-auto pt-5">
       <p class="lead">
-        I am an Assistant Professor in the Department of Electrical and Computer Engineering at the University of Wisconsin-Madison.
+        I am an Assistant Professor at the University of Wisconsin-Madison in the department of Electrical and Computer Engineering, and affiliated with the Computer Sciences department.
         My research interests are at the intersection of computer vision and machine learning. Specifically, I develop systems that continuously learn to perceive the world through multiple sensory modalities.
       </p>
       <p class="lead mb-2">
